# factor-hs

./: Makefile  README.md  factor.cabal  factor.hs  genprimes.hs
src/: factor.hs
