cabal-version: 2.4
name:          factor
version:       0.1.0.8
synopsis:      Program what facilitates the factoring of natural numbers
description:   This program is a reimplementation of the old "factor"
               "game" of Berkeley UNIX systems.
bug-reports:   http://github.com/varikvalefor/factor-hs/issues
license:       BSD-3-Clause
author:        Varik Valefor
maintainer:    varikvalefor@aol.com
copyright:     (c) Varik Valefor 2021.
category:      Game

executable factor
  main-is: factor.hs
  ghc-options: -O2
  hs-source-dirs: src
  build-depends:
    base,
    extra == 1.7.*,
    containers == 0.6.*
  default-language: Haskell2010
